// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoppedTasksCard render selected 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card stopped-tasks-card selected-tasks-card"
  id="stopped-tasks-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  >
    Stopped
  </CardTitle>
  <CardBody
    className=""
  >
    <StoppedTable
      data={
        Object {
          "error": Object {
            "last": 0,
            "total": 0,
          },
          "success": Object {
            "last": 0,
            "total": 0,
          },
          "warning": Object {
            "last": 0,
            "total": 0,
          },
        }
      }
      query={
        Object {
          "state": "stopped",
        }
      }
      time="H24"
      updateQuery={[Function]}
    />
    <OtherInfo
      otherCount={0}
      query={
        Object {
          "state": "stopped",
        }
      }
      updateQuery={[Function]}
    />
  </CardBody>
</Card>
`;

exports[`StoppedTasksCard render with minimal props 1`] = `
<Card
  accented={false}
  aggregated={false}
  aggregatedMini={false}
  cardRef={null}
  className="tasks-donut-card stopped-tasks-card"
  id="stopped-tasks-card"
  matchHeight={false}
>
  <CardTitle
    className=""
    onClick={[Function]}
  >
    Stopped
  </CardTitle>
  <CardBody
    className=""
  >
    <StoppedTable
      data={
        Object {
          "error": Object {
            "last": 0,
            "total": 0,
          },
          "success": Object {
            "last": 0,
            "total": 0,
          },
          "warning": Object {
            "last": 0,
            "total": 0,
          },
        }
      }
      query={Object {}}
      time="H24"
      updateQuery={[Function]}
    />
    <OtherInfo
      otherCount={0}
      query={Object {}}
      updateQuery={[Function]}
    />
  </CardBody>
</Card>
`;
